Added "my courses" to navbar

--- a/bowser/templates/base.html
+++ b/bowser/templates/base.html
@@ -8,6 +8,7 @@
 
 <body>
 
+
 {% if is_authenticated %}
 
 <nav class="navbar navbar-default" role="navigation">
@@ -58,6 +59,7 @@
       <ul class="nav navbar-nav">
 		<li><a href="#">Scheduler</a><li>
 		<li><a href="#">Checklist</a><li>
+		<li><a href="#">My Courses</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
 		<li class="active"><a href="profile.html">Profile</a></li>
@@ -74,6 +76,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	
 {& block footer %}{& endblock %}
+</div>
 </body>
 </html>
 
