Added "my courses" to navbar

--- a/bowser/templates/base.html
+++ b/bowser/templates/base.html
@@ -28,6 +28,7 @@
         <li><a href="#">Profile</a></li>
 		<li><a href="#">Scheduler</a><li>
 		<li><a href="#">Checklist</a><li>
+		<li><a href="#">My Courses</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">About</a></li>
